if IBMDB2
GDA_IBMDB2_SERVER=ibmdb2
endif

if FIREBIRD
GDA_FIREBIRD_SERVER=firebird
endif

if MDB
GDA_MDB_SERVER=mdb
endif

if MYSQL
GDA_MYSQL_SERVER=mysql
endif

if ODBC
GDA_ODBC_SERVER=odbc
endif

if ORACLE
GDA_ORACLE_SERVER=oracle
endif

if POSTGRES
GDA_POSTGRES_SERVER=postgres
endif

if SQLITE
GDA_SQLITE_SERVER=sqlite
endif

if SYBASE
GDA_SYBASE_SERVER=sybase
endif

if FREETDS
GDA_FREETDS_SERVER=freetds
endif

if XBASE
GDA_XBASE_SERVER=xbase
endif

SUBDIRS = \
	$(GDA_FREETDS_SERVER) \
	$(GDA_IBMDB2_SERVER) \
	$(GDA_FIREBIRD_SERVER) \
	$(GDA_MDB_SERVER) \
	$(GDA_MYSQL_SERVER) \
	$(GDA_ODBC_SERVER) \
	$(GDA_ORACLE_SERVER) \
	$(GDA_POSTGRES_SERVER) \
	$(GDA_SQLITE_SERVER) \
	$(GDA_SYBASE_SERVER) \
	$(GDA_XBASE_SERVER) \
	default
