if BDB 
GDA_BDB_SERVER=bdb
endif

if IBMDB2
GDA_IBMDB2_SERVER=ibmdb2
endif

if FIREBIRD
GDA_FIREBIRD_SERVER=firebird
endif

if MDB
GDA_MDB_SERVER=mdb
endif

if MYSQL
GDA_MYSQL_SERVER=mysql
endif

if MSQL
GDA_MSQL_SERVER=msql
endif

if ODBC
GDA_ODBC_SERVER=odbc
endif

if ORACLE
GDA_ORACLE_SERVER=oracle
endif

if POSTGRES
GDA_POSTGRES_SERVER=postgres
endif

if SYBASE
GDA_SYBASE_SERVER=sybase
endif

if FREETDS
GDA_FREETDS_SERVER=freetds
endif

if XBASE
GDA_XBASE_SERVER=xbase
endif

if LDAP
GDA_LDAP_SERVER=ldap
endif

if JAVA
GDA_JAVA_SERVER=jdbc
endif

SUBDIRS = \
	sqlite \
	skel-implementation \
	$(GDA_BDB_SERVER) \
	$(GDA_MDB_SERVER) \
	$(GDA_POSTGRES_SERVER) \
	$(GDA_MYSQL_SERVER) \
	$(GDA_JAVA_SERVER) \
	$(GDA_ORACLE_SERVER)
#	$(GDA_FREETDS_SERVER) \
#	$(GDA_IBMDB2_SERVER) \
#	$(GDA_FIREBIRD_SERVER) \
#       $(GDA_MSQL_SERVER) \
#	$(GDA_ODBC_SERVER) \
#	$(GDA_SYBASE_SERVER) \
#	$(GDA_XBASE_SERVER) \
#	$(GDA_LDAP_SERVER) 
