if BDB 
GDA_BDB_SERVER=bdb
endif

if BDBSQL
GDA_BDBSQL_SERVER=bdbsql
endif

if FIREBIRD
GDA_FIREBIRD_SERVER=firebird
endif

if MDB
GDA_MDB_SERVER=mdb
endif

if MYSQL
GDA_MYSQL_SERVER=mysql
endif

if ORACLE
GDA_ORACLE_SERVER=oracle
endif

if POSTGRES
GDA_POSTGRES_SERVER=postgres
endif

if FREETDS
GDA_FREETDS_SERVER=freetds
endif

if XBASE
GDA_XBASE_SERVER=xbase
endif

if LDAP
GDA_LDAP_SERVER=ldap
endif

if JAVA
GDA_JAVA_SERVER=jdbc
endif

if LIBSOUP
GDA_WEB_SERVER=web
endif

if HAVE_LIBCRYPTO
GDA_SQLCIPHER_SERVER=sqlcipher
endif

SUBDIRS = \
	reuseable \
	sqlite \
	skel-implementation \
	$(GDA_BDB_SERVER) \
	$(GDA_BDBSQL_SERVER) \
	$(GDA_MDB_SERVER) \
	$(GDA_POSTGRES_SERVER) \
	$(GDA_MYSQL_SERVER) \
	$(GDA_JAVA_SERVER) \
	$(GDA_ORACLE_SERVER) \
	$(GDA_WEB_SERVER) \
	$(GDA_SQLCIPHER_SERVER)
#	$(GDA_FREETDS_SERVER) \
#	$(GDA_FIREBIRD_SERVER) \
#	$(GDA_XBASE_SERVER) \
#	$(GDA_LDAP_SERVER) 
